character details added

--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -10,7 +10,7 @@
     width: 24px;
     height: 24px;
     border: none;
-    background: url(../../../public/images/search.png) center no-repeat;
+    background: url(../../../public/images/search.svg) center no-repeat;
     cursor: pointer;
     border-radius: 50%;       
 }
