--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -12,7 +12,7 @@
     border: none;
     background: url(../../../public/images/search.svg) center no-repeat;
     cursor: pointer;
-    border-radius: 50%;       
+    border-radius: 8px;       
 }
 
 .search__button:hover {  
