--- a/src/components/Error/Error.css
+++ b/src/components/Error/Error.css
@@ -1,8 +1,11 @@
 .error {
-    width: 250px;
+    max-width: 300px;
     text-align: center;
-    color: rgb(212, 6, 6);
-    font-size: 20px;
-    padding: 30px 0;
-    margin: 0 auto;   
+    line-height: 130%;
+    color: #00B0C8;
+    font-size: 22px;
+    font-weight: 700;
+    text-shadow: 2px 2px 2px #91FE7A;
+    padding: 15px 0;
+    margin: 0 auto;    
 }
