--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -5,3 +5,16 @@
     height: 200px;
     margin: 0 auto 16px;
 }
+
+@media screen and (max-width: 700px) {
+    .logo {
+        width: 100%; 
+        background-size: contain;     
+    }    
+}
+
+@media screen and (max-width: 500px) {
+    .logo {        
+        height: 135px;      
+    }    
+}
