--- a/src/pages/MainPage/MainPage.css
+++ b/src/pages/MainPage/MainPage.css
@@ -3,3 +3,11 @@
     padding: 85px 0 185px;
     margin: 0 auto;
 }
+
+@media screen and (max-width: 1100px) {
+    .main-page {
+        width: 100%;
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+}
