--- a/src/pages/MainPage/MainPage.css
+++ b/src/pages/MainPage/MainPage.css
@@ -1,7 +1,13 @@
 .main-page {
     max-width: 1020px;
-    padding: 85px 0 185px;
+    padding: 15px 0 185px;
     margin: 0 auto;
+}
+
+.auth-wrapper {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 35px;
 }
 
 @media screen and (max-width: 1100px) {
