--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -60,9 +60,22 @@
     width: 250px;    
     top: 36px;
     left: 0;
-    background: #d2fec9;
+    background: #e6f4e3;
     border-radius: 8px;
     padding: 10px 0;    
+}
+
+.profile-link {    
+    display: block;
+    font-size: 14px;  
+    font-weight: 700;    
+    color: black;
+    text-decoration: none;
+    padding: 10px 20px;  
+}
+
+.profile-link:hover {
+    background-color: #00b1c830;
 }
 
 .logout-button {
@@ -71,11 +84,18 @@
     font-weight: 700;
     background: none;
     border: none;
-    text-align: left;    
+    text-align: left; 
+    font-family: 'Roboto', sans-serif;   
     cursor: pointer;  
-    padding: 5px 20px;  
+    padding: 10px 20px;  
 }
 
 .logout-button:hover {
     background-color: #00b1c830;
+}
+
+@media screen and (max-width: 500px) {
+    .user {
+        margin: 0 auto;
+    }
 }
