--- a/src/components/Error/Error.css
+++ b/src/components/Error/Error.css
@@ -1,12 +1,12 @@
 .error {
     max-width: 270px;
-    height: 36px;
+    min-height: 36px;
     text-align: center;
     line-height: 130%;
     color: #00B0C8;
     font-size: 20px;
     font-weight: 700;
     text-shadow: 2px 2px 2px #91FE7A;
-    padding: 4px 0;
+    padding: 5px 0;
     margin: 0 auto;    
 }
